--- a/.github/workflows/section-3-action-2.yml
+++ b/.github/workflows/section-3-action-2.yml
@@ -7,9 +7,7 @@ jobs:
       - name: clone repository to runner
         uses: actions/checkout@v4.1.1
       - name: install nodejs
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+        uses: actions/setup-node
       - name: install dependencies
         run: npm install
       - name: run tests
