--- a/.github/workflows/section-3-action-2.yml
+++ b/.github/workflows/section-3-action-2.yml
@@ -7,7 +7,7 @@ jobs:
       - name: clone repository to runner
         uses: actions/checkout@v4.1.1
       - name: install nodejs
-        uses: actions/setup-node
+        uses: actions/setup-node@v4.01
       - name: install dependencies
         run: npm install
       - name: run tests
