test to be squashed

--- a/.github/workflows/section-3-action-2.yml
+++ b/.github/workflows/section-3-action-2.yml
@@ -4,6 +4,8 @@ jobs:
   validate_code:
     runs-on: ubuntu-latest
     steps:
+      - name: global node reset?
+        run: npm install -g np
       - name: clone repository to runner
         uses: actions/checkout@v4
       - name: install node js
