--- a/.github/workflows/section-3-action-2.yml
+++ b/.github/workflows/section-3-action-2.yml
@@ -8,11 +8,8 @@ jobs:
         run: npm install -g np
       - name: clone repository to runner
         uses: actions/checkout@v4
-      - name: install node js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: 18
-      - name: install dependencies
-        run: npm install
-      - name: run tests
-        run: npm test
+      - run: npm ci
+      - run: npm test
