--- a/.github/workflows/section-3-action-2.yml
+++ b/.github/workflows/section-3-action-2.yml
@@ -6,8 +6,7 @@ jobs:
     steps:
       - name: exploratory functions
         run: |
-          cd /home/runner/
-          npm ci
+          npm i
           npm test
 
 
